scripts/nullness/nullgtn/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8.txt
../nullgtn/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/monster/Monster.java:14: error: [initialization.field.uninitialized] the default constructor does not initialize field id
    private Long id;
                 ^
../nullgtn/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/monster/Monster.java:54: error: [return] incompatible types in return.
        return null;
               ^
  type of expression: null (NullType)
  method return type: @Initialized @NonNull List<@Initialized @NonNull Item>
../nullgtn/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/RpgObject.java:13: error: [initialization.field.uninitialized] the default constructor does not initialize field name
    private String name;
                   ^
../nullgtn/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/RpgObject.java:15: error: [initialization.field.uninitialized] the default constructor does not initialize field stats
    private Stats stats;
                  ^
../nullgtn/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/RpgObject.java:49: error: [return] incompatible types in return.
            return null;
                   ^
  type of expression: null (NullType)
  method return type: @Initialized @NonNull Boolean
../nullgtn/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/player/Job.java:68: error: [return] incompatible types in return.
            return null;
                   ^
  type of expression: null (NullType)
  method return type: @Initialized @NonNull Skill
../nullgtn/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/Skill.java:27: error: [initialization.fields.uninitialized] the constructor does not initialize fields: name, damage, recovery, statusEffect
    public Skill(EffectType type) {
           ^
../nullgtn/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/Stats.java:8: error: [initialization.field.uninitialized] the default constructor does not initialize field maxHp
    private Long maxHp;
                 ^
../nullgtn/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/Stats.java:10: error: [initialization.field.uninitialized] the default constructor does not initialize field hp
    private Long hp;
                 ^
../nullgtn/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/Stats.java:12: error: [initialization.field.uninitialized] the default constructor does not initialize field str
    private Long str;
                 ^
../nullgtn/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/Stats.java:14: error: [initialization.field.uninitialized] the default constructor does not initialize field def
    private Long def;
                 ^
../nullgtn/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/Stats.java:16: error: [initialization.field.uninitialized] the default constructor does not initialize field atk
    private Long atk;
                 ^
../nullgtn/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/Stats.java:18: error: [initialization.field.uninitialized] the default constructor does not initialize field maxMp
    private Long maxMp;
                 ^
../nullgtn/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/Stats.java:20: error: [initialization.field.uninitialized] the default constructor does not initialize field mp
    private Long mp;
                 ^
../nullgtn/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/item/Item.java:19: error: [initialization.fields.uninitialized] the constructor does not initialize fields: name, equipable, rarity
    public Item() {
           ^
../nullgtn/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/item/Item.java:20: error: [method.invocation] call to setEquipable(java.lang.Boolean) not allowed on the given receiver.
        setEquipable(false);
                    ^
  found   : @UnderInitialization @NonNull Item
  required: @Initialized @NonNull Item
../nullgtn/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/player/Player.java:15: error: [initialization.field.uninitialized] the default constructor does not initialize field id
    private Long id;
                 ^
../nullgtn/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/player/Player.java:17: error: [initialization.field.uninitialized] the default constructor does not initialize field job
    private Job job;
                ^
18 errors
